fix err type and add seo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nashi-frontend</title>
+
+    <!-- Primary Meta Tags -->
+    <title>НАШІ - Платформа української культурної спадщини</title>
+    <meta name="title" content="НАШІ - Платформа української культурної спадщини" />
+    <meta name="description" content="Відкрийте для себе українську культуру: митці, події, новини та радіо. Інтерактивна карта культурних подій України." />
+    <meta name="keywords" content="Україна, культура, мистецтво, події, митці, українська музика, культурна спадщина" />
+    <meta name="author" content="НАШІ" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="uk_UA" />
+    <meta property="og:site_name" content="НАШІ" />
+    <meta property="og:title" content="НАШІ - Платформа української культурної спадщини" />
+    <meta property="og:description" content="Відкрийте для себе українську культуру: митці, події, новини та радіо. Інтерактивна карта культурних подій України." />
+    <meta property="og:image" content="/web-app-manifest-512x512.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="НАШІ - Платформа української культурної спадщини" />
+    <meta name="twitter:description" content="Відкрийте для себе українську культуру: митці, події, новини та радіо. Інтерактивна карта культурних подій України." />
+    <meta name="twitter:image" content="/web-app-manifest-512x512.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
