--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>НАШІ - Платформа української культурної спадщини</title>
+    <title>НАШІ -- Платформа української культурної спадщини</title>
     <meta name="title" content="НАШІ - Платформа української культурної спадщини" />
     <meta name="description" content="Відкрийте для себе українську культуру: митці, події, новини та радіо. Інтерактивна карта культурних подій України." />
     <meta name="keywords" content="Україна, культура, мистецтво, події, митці, українська музика, культурна спадщина" />
